# app/Http/Controllers/Api/UserController.php
@@ -1,27 +1,0 @@
-<?php
-
-namespace App\Http\Controllers\Api;
-
-use App\Http\Controllers\Controller;
-use Illuminate\Http\Request;
-use OpenApi\Attributes as OA;
-
-class UserController extends Controller
-{
-    #[OA\Get(
-        path: '/api/user',
-        summary: 'Get authenticated user',
-        tags: ['User'],
-        security: [['bearerAuth' => []]],
-        responses: [
-            new OA\Response(
-                response: 200,
-                description: 'Authenticated user data'
-            ),
-        ],
-    )]
-    public function __invoke(Request $request)
-    {
-        return $request->user();
-    }
-}
